--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Firebase Authenticator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "open": "cd \"C:\\Program Files (x86)\\Google\\Chrome\\Application\" & chrome.exe --app=http://localhost:4100"
   },
   "author": "Ramtin Soltani",
   "license": "ISC",
